--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <div class="container">
    <div class="card-white" id="introduction">
 	<h1>Hello, I'm Mariem 😎 </h1>
-	<img src="images/profile.jpg" class="img-circle" width="100px" alt="Mariem Bouali">
+	<img src="images/profile-picture.jpg" class="img-circle" width="100px" alt="Mariem Bouali">
 	<p>
 		I Love Coding ,web-development and I am passionate about cooking and skincare 💆🏻‍ .
 	</p>
